# ergon

./: .gitignore  README.md  package.json  vercel.json
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  main.py
backend/app/helpers/: __init__.py  cdn.py  file_utils.py  gemini.py  text_utils.py
backend/app/models/: __init__.py  agent.py  component.py  parsed_data.py  requests.py  responses.py
backend/app/routers/: __init__.py  components.py  design.py
backend/app/services/: __init__.py  component_registry.py  context_builder.py  figma_service.py  html_service.py  parser.py  pipeline.py  pipeline_stream.py  prompt_formatter.py  reasoning.py  tools.py
backend/docs/: sample_catalog.json
docs/: sample_prd.txt
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/data/: mockData.js
frontend/src/pages/: AiChatPage.jsx  Audience.jsx  BillingPage.jsx  Campaigns.jsx  Dashboard.jsx  NewCampaignPage.jsx  ReportingPage.jsx  Reports.jsx  Settings.jsx  figmaDashboardHTML.js
frontend/src/services/: api.js
src/: App.jsx
src/components/dashboard/: TopPublishers.jsx  TrafficDonut.jsx
src/components/layout/: CampaignLayout.jsx  Layout.jsx  Navbar.jsx  Sidebar.jsx
src/pages/: AiChatPage.jsx  Analytics.jsx  BillingPage.jsx  CampaignDashboardPage.jsx  NewCampaignPage.jsx  ReportingPage.jsx  figmaDashboardHTML.js
(+9 files in other folders)
