[project]
name = "design-generator"
version = "0.1.0"
description = "Ergon — AI design agent that generates Figma designs and HTML wireframes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.97",
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]

[project.scripts]
start = "app.cli:start"
dev = "app.cli:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
